podAntiAffinity.yaml
apiVersion: v1 
kind: Pod
metadata:
  name: podAntiAffinity
  namespace: default
spec:
  affinity:
    podAfinity: 
      requiredDuringSchedulingIgnoredDuringExecution:
      - labelSelector:
          matchExpressions: # it will assign pod to that node which has matchinglabel
          - key: regiom      # or maatching toplogykey
            operator: In
            values:
            - ap-south-1
        topologyKey: "topology.kubernetes.io/zone"
