readinessprobewith-tcpsocket.yaml
apiVersion: v1 
kind: Pod
metadata:
  name: readiness-probe
  namespace: default
spec:
  containers: 
  - name: readiness-probe
    image: nginx
    ports:
      - name: http
        port: 80
  readinessProbe:
    tcpSocket:
      path: /
      port: http   # caliing port with name 
    initialDelaySeconds: 5
    periodSeconds: 10
