statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata: 
  name: statefulset-mysql
  namespace: default
spec:
  replicas: 2
  selector:
    matchLabels:
      app: mysql
  serviceName: "mysql"
  template:
    metadata:
      labels: 
        app: mysql
    spec:
      containers:
      - name: mysql
        image: mysql:latest
        ports:
          - name: http
            containerPort: 80
        volumeMounts:
          - name: mysql-vol
            mountPath: /var/lib/mysql
  volumeClaimTemplates:
  - metadata:
      name: mysql-vol
    spec:
      accessModes: ["ReadWriteOnce"]
      storageClassName: "my-storage-class"
      resources:
        requests:
          storage: "1Gi"
