tant -tolerations.yaml
apiVersion: v1
kind: Pod
metadata:
  name: taint-tolerations
  namespace: default
spec:
  containers:
  - name: container-name
    image: nginx
    ports:
      - port: 80
  tolerations:                   #here it tells that the node which have key-value name=node-1 dont schedule to
  - key: "name"                   # to that node.
    operator: "Equal"
    value: "node-1"
    effect: NoSchedule
