Deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deploy-v1.0.0
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
    spec:
      containers:
      - name: cont-1
        image: nginx
        ports:
          - containerPort: 80
        volumeMounts:
          - name: www
            mountPath: /usr/share/nginx/html/
      volumes:
        - name: www
          persistentVolumeClaim:
            claimName: pvc-nginx

---
apiVersion: v1
kind: Service
metadata:
  name: svc-nginx
  namespace: default
spec:
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: web
  type: NodePort
